--- a/_posts/VQE18-6-11.md
+++ b/_posts/VQE18-6-11.md
@@ -1,4 +1,9 @@
-# A Quick Example of Variational Quantum Eigensolver
+---
+layout: post
+title: A Quick Example of Variational Quantum Eigensolver
+tags: physics
+
+---
 
 Take hydrogen molecule $H_2$ as an example, its Hamiltonian $H$ can be written in second quantization as
 $$
