--- a/_posts/2018-6-11-VQE.md
+++ b/_posts/2018-6-11-VQE.md
@@ -34,13 +34,13 @@ For the experiment, we only need 2 qubits: \\(q_0\\) and \\(q_1\\)
 
    - \\(i=0:\langle\psi(\theta)\vert I_0\otimes I _1\vert\psi(\theta)\rangle=1\\)
 
-   - \\(i=1:\langle\psi(\theta)\vert Z_0\otimes I_1\vert\psi(\theta)\rangle=(a_0^*\langle 00\vert+a_1^*\langle 01\vert+a_2^*\langle 10\vert+a_3^*\langle 11\vert)(a_0\vert00\rangle+a_1\vert01\rangle-a_2\vert10\rangle-a_3\vert11\rangle)=P_1+P_2-P_3-P_4\\)
+   - \\(i=1:\langle\psi(\theta)\vert Z_0\otimes I_1\vert\psi(\theta)\rangle=(a_0^{*}\langle 00\vert+a_1^{*}\langle 01\vert+a_2^{*}\langle 10\vert+a_3^{*}\langle 11\vert)(a_0\vert00\rangle+a_1\vert01\rangle-a_2\vert10\rangle-a_3\vert11\rangle)=P_1+P_2-P_3-P_4\\)
 
-   - \\(i=2:\langle\psi(\theta)\vert I_0\otimes Z_1\vert\psi(\theta)\rangle=(a_0^*\langle 00\vert+a_1^*\langle 01\vert+a_2^*\langle 10\vert+a_3^*\langle 11\vert)(a_0\vert00\rangle-a_1\vert01\rangle+a_2\vert10\rangle-a_3\vert11\rangle)=P_1-P_2+P_3-P_4\\)
+   - \\(i=2:\langle\psi(\theta)\vert I_0\otimes Z_1\vert\psi(\theta)\rangle=(a_0^{*}\langle 00\vert+a_1^{*}\langle 01\vert+a_2^{*}\langle 10\vert+a_3^{*}\langle 11\vert)(a_0\vert00\rangle-a_1\vert01\rangle+a_2\vert10\rangle-a_3\vert11\rangle)=P_1-P_2+P_3-P_4\\)
 
-   - \\(i=3:\langle\psi(\theta)\vert Z_0\otimes Z_1\vert\psi(\theta)\rangle=(a_0^*\langle 00\vert+a_1^*\langle 01\vert+a_2^*\langle 10\vert+a_3^*\langle 11\vert)(a_0\vert00\rangle-a_1\vert01\rangle-a_2\vert10\rangle+a_3\vert11\rangle)=P_1-P_2-P_3+P_4\\)
+   - \\(i=3:\langle\psi(\theta)\vert Z_0\otimes Z_1\vert\psi(\theta)\rangle=(a_0^{*}\langle 00\vert+a_1^{*}\langle 01\vert+a_2^{*}\langle 10\vert+a_3^{*}\langle 11\vert)(a_0\vert00\rangle-a_1\vert01\rangle-a_2\vert10\rangle+a_3\vert11\rangle)=P_1-P_2-P_3+P_4\\)
 
-   - \\(i=4:\langle\psi(\theta)\vert Y_0\otimes Y_1\vert\psi(\theta)\rangle=(a_0^*\langle 00\vert+a_1^*\langle 01\vert+a_2^*\langle 10\vert+a_3^*\langle 11\vert)(-a_0\vert11\rangle+a_1\vert10\rangle+a_2\vert01\rangle-a_3\vert00\rangle)=\Re[a_1^*a_2-a_0^*a_3]\\)
+   - \\(i=4:\langle\psi(\theta)\vert Y_0\otimes Y_1\vert\psi(\theta)\rangle=(a_0^{*}\langle 00\vert+a_1^{*}\langle 01\vert+a_2^{*}\langle 10\vert+a_3^{*}\langle 11\vert)(-a_0\vert11\rangle+a_1\vert10\rangle+a_2\vert01\rangle-a_3\vert00\rangle)=\Re[a_1^*a_2-a_0^*a_3]\\)
 
      But, this result cannot be measured. So we will need a rotation.
 
