--- a/_posts/2018-08-27-phonons.md
+++ b/_posts/2018-08-27-phonons.md
@@ -1,6 +1,9 @@
+---
+layout: post
+title: Classical Description of Phonons
+tags: physics
 
-
-# Classical and Quantum Description of Phonons
+---
 
 ### 1st Classical Description (1 dimension)
 
